--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.3",
     "react": "^19.2.3",
-    "lucide-react": "^0.562.0",
+    "react-dom": "^19.2.3",
+    "lucide-react": "0.475.0",
     "firebase": "^12.8.0"
   },
   "devDependencies": {
